--- a/apps/ux-films-finder/src/app/components/simple-ex/simple-ex.component.html
+++ b/apps/ux-films-finder/src/app/components/simple-ex/simple-ex.component.html
@@ -7,4 +7,5 @@
     <div>{{ filmInfo?.nameOriginal }}</div>
     <div>{{ filmInfo?.year }}</div>
   </ng-container>
+  <div class="hello">hello</div>
 </div>
