--- a/apps/ux-films-finder/src/app/components/simple-ex/simple-ex.component.html
+++ b/apps/ux-films-finder/src/app/components/simple-ex/simple-ex.component.html
@@ -1,5 +1,5 @@
 <div class="ff-simple-ex">
-  <p>simple-ex works!</p>
+  <p>simple-ex works</p>
 
   <mat-slider min="1" max="100" step="1" value="50"></mat-slider>
 
