--- a/apps/ux-films-finder/src/app/components/header/header.component.less
+++ b/apps/ux-films-finder/src/app/components/header/header.component.less
@@ -32,7 +32,7 @@
 
   &__link {
     height: 40px;
-    font-family: "ABeeZee";
+    font-family: ABeeZee, serif;
     color: aliceblue;
     font-size: 23px;
   }
@@ -52,11 +52,6 @@
     align-items: center;
   }
 
-  /* &__changetheme-button {
-     display: flex;
-     align-items: center;
-   }*/
-
   &__person-icon {
     width: 50px;
     height: 50px;
@@ -64,20 +59,19 @@
     margin-right: 34px;
   }
 
-
   &__search {
     width: 470px;
     display: flex;
     align-items: center;
     justify-content: flex-end;
     margin-right: 25px;
-
   }
-  &__search-icon, &__filter{
+  &__search-icon,
+  &__filter {
     cursor: pointer;
   }
 
-  &__search-icon-hidden{
+  &__search-icon-hidden {
     display: none;
   }
   &__search-content {
@@ -94,11 +88,9 @@
   }
 }
 
-
 @media only screen and (max-width: 1500px) {
   .header {
     display: flex;
-
 
     &__left-side {
       justify-content: flex-start;
@@ -126,9 +118,7 @@
     &__search {
       width: 420px;
       margin-right: 15px;
-
     }
-
 
     &__search-content {
       width: 400px;
@@ -140,14 +130,12 @@
   }
 }
 
-
 @media only screen and (max-width: 800px) {
   .header {
     &__right-side {
       justify-content: flex-end;
       width: 38%;
     }
-
 
     &__left-side {
       width: 62%;
@@ -158,15 +146,12 @@
       width: 35px;
       display: block;
       cursor: pointer;
+      margin-left: 10px;
     }
 
-    &__search-content {
+    &__search-icon {
       display: none;
     }
-
-    /* &__changetheme-button {
-       display: none;
-     }*/
 
     &__toogle {
       margin-left: 12px;
@@ -177,4 +162,3 @@
     }
   }
 }
-
