--- a/apps/ux-films-finder/src/app/components/header/header.component.html
+++ b/apps/ux-films-finder/src/app/components/header/header.component.html
@@ -12,9 +12,9 @@
       <a class="header__link" mat-flat-button routerLink="/news">Новости</a>
       <a class="header__link" mat-flat-button routerLink="/show">Ток-шоу</a>
       <a class="header__link" mat-flat-button routerLink="/child">Детский</a>
-      <a class="header__link" mat-flat-button routerLink="/cartoon"
-        >Мультфильмы</a
-      >
+      <a class="header__link" mat-flat-button routerLink="/cartoon">
+        Мультфильмы
+      </a>
     </div>
   </div>
   <div class="header__right-side">
