--- a/apps/ux-films-finder/src/app/components/header/header.component.html
+++ b/apps/ux-films-finder/src/app/components/header/header.component.html
@@ -11,7 +11,9 @@
     <div class="header__navigation">
       <a class="header__link" mat-flat-button routerLink="/news">Новости</a>
       <a class="header__link" mat-flat-button routerLink="/show">Ток-шоу</a>
-      <a class="header__link" mat-flat-button routerLink="/child">Детский</a>
+      <a class="header__link" mat-flat-button routerLink="/for-children"
+        >Детский</a
+      >
       <a class="header__link" mat-flat-button routerLink="/cartoon">
         Мультфильмы
       </a>
