--- a/apps/ux-films-finder/src/app/components/sidenav-list/sidenav-list.component.html
+++ b/apps/ux-films-finder/src/app/components/sidenav-list/sidenav-list.component.html
@@ -12,7 +12,7 @@
       </div>
     </div>
     <div mat-list-item class="nav-list__link" (click)="onSidenavClose()">
-      <div class="nav-list__link" mat-flat-button routerLink="/child">
+      <div class="nav-list__link" mat-flat-button routerLink="/for-children">
         Детский
       </div>
     </div>
