feature/21-page-no-found-components bugfix/5-header-components

--- a/apps/ux-films-finder/src/app/components/header/header.component.less
+++ b/apps/ux-films-finder/src/app/components/header/header.component.less
@@ -162,3 +162,34 @@
     }
   }
 }
+
+@media only screen and (max-width: 555px) {
+  .header {
+    &__search-content {
+      width: 300px;
+    }
+    &__input {
+      width: 250px;
+    }
+  }
+}
+@media screen and (max-width: 460px) {
+  .header {
+    &__search-content {
+      width: 220px;
+    }
+    &__input {
+      width: 190px;
+    }
+  }
+}
+@media screen and (max-width: 380px) {
+  .header {
+    &__search-content {
+      width: 150px;
+    }
+    &__input {
+      width: 120px;
+    }
+  }
+}
