change class name

--- a/apps/ux-films-finder/src/app/components/not-found-page/not-found-page.component.less
+++ b/apps/ux-films-finder/src/app/components/not-found-page/not-found-page.component.less
@@ -17,7 +17,7 @@
     margin-bottom: 60px;
   }
 
-  &__404-text {
+  &__error-text {
     font-family: 'Montserrat', sans-serif;
     font-size: 28px;
     font-weight: 600;
@@ -58,7 +58,7 @@
       font-size: 86px;
       margin-bottom: 5px;
     }
-    &__404-text {
+    &__error-text {
       font-size: 16px;
       margin-bottom: 15px;
     }
