--- a/apps/ux-films-finder/src/app/components/not-found-page/not-found-page.component.html
+++ b/apps/ux-films-finder/src/app/components/not-found-page/not-found-page.component.html
@@ -1,7 +1,7 @@
 <div class="not-found">
   <div class="not-found__text-container">
     <h1 class="not-found__oops-text">OOPS!</h1>
-    <h2 class="not-found__404-text">404 - СТРАНИЦА НЕ НАЙДЕНА</h2>
+    <h2 class="not-found__error-text">404 - СТРАНИЦА НЕ НАЙДЕНА</h2>
     <a class="not-found__button" routerLink=""> НА ГЛАВНУЮ СТРАНИЦУ </a>
   </div>
 </div>
