--- a/apps/ux-films-finder/src/app/components/details/details.component.html
+++ b/apps/ux-films-finder/src/app/components/details/details.component.html
@@ -12,37 +12,49 @@
       </div>
       <div class="film-details__info _feature">
         <div class="film-details__info _feature _type">
-          <div class="film-details__info _feature _type _type-title">Тип</div>
+          <div class="film-details__info _feature _type _feature-title">
+            Тип
+          </div>
           <div class="film-details__info _feature _type _type-title-name">
             {{ filmInfo?.type }}
           </div>
         </div>
         <div class="film-details__info _feature _year">
-          <div class="film-details__info _feature _year _year-title">Год</div>
+          <div class="film-details__info _feature _year _feature-title">
+            Год
+          </div>
           <div class="film-details__info _feature _year _year-date">
             {{ filmInfo?.year }}
           </div>
         </div>
         <div class="film-details__info _feature _ratingImdb">
-          <div class="film-details__info _feature _ratingImdb-title">
+          <div class="film-details__info _feature _feature-title">
             Рейтинг Imdb
           </div>
           <div class="film-details__info _feature _ratingImdb-number">
             {{ filmInfo?.ratingImdb }}
           </div>
         </div>
+        <div class="film-details__info _feature _filmLength">
+          <div class="film-details__info _feature _feature-title">
+            Длительность
+          </div>
+          <div class="film-details__info _feature _filmLength-number">
+            {{ filmInfo?.filmLength + ' минут' }}
+          </div>
+        </div>
         <div class="film-details__info _feature _genres">
-          <div class="film-details__info _feature _genres-title">Жанр</div>
-          <ng-container *ngFor="let genreItem of filmInfo?.genres; index as i">
-            <div class="film-details__info _feature _genres-names">
+          <div class="film-details__info _feature _feature-title">Жанр</div>
+          <br />
+          <ng-container *ngFor="let genreItem of filmInfo?.genres">
+            <div class="film-details__info _feature _genres-name">
               {{ genreItem.genre }}
-              <span *ngIf="i !== filmInfo.genres.length">,</span>
             </div>
           </ng-container>
         </div>
 
         <div class="film-details__info _feature _countries">
-          <div class="film-details__info _feature _countries-title">Страна</div>
+          <div class="film-details__info _feature _feature-title">Страна</div>
           <ng-container *ngFor="let countryItem of filmInfo?.countries">
             <div class="film-details__info _feature _countries-names">
               {{ countryItem.country }}
@@ -51,13 +63,20 @@
         </div>
         <ng-container *ngIf="filmInfo.slogan"
           ><div class="film-details__info _feature _slogan">
-            Слоган:<br />
+            <div class="film-details__info _feature _slogan _feature-title">
+              Слоган
+            </div>
             {{ filmInfo?.slogan }}
-          </div></ng-container
-        >
+          </div>
+        </ng-container>
         <ng-container *ngIf="filmInfo.description">
           <div class="film-details__info _feature _description">
-            Описание:{{ filmInfo?.description }}
+            <div
+              class="film-details__info _feature _description _feature-title"
+            >
+              Описание
+            </div>
+            {{ filmInfo?.description }}
           </div>
         </ng-container>
       </div>
