--- a/apps/ux-films-finder/src/app/components/details/details.component.less
+++ b/apps/ux-films-finder/src/app/components/details/details.component.less
@@ -2,38 +2,99 @@
 .film-details {
   display: flex;
   flex-direction: row;
-  margin: 0 8%;
-
+  margin: 16px;
+  line-height: 40px;
+  text-align: start;
   &__img {
-    width: 300px;
-    height: 400px;
+    width: 450px;
+    height: 600px;
     margin-right: 8%;
   }
   &__info {
-    font-size: 32px;
+    font-size: 24px;
     &._title {
-      font-size: 40px;
+      font-size: 48px;
       font-weight: bold;
-      margin-bottom: 8%;
+      margin-bottom: 16px;
+      line-height: 48px;
+      letter-spacing: -0.5px;
     }
     &._feature {
-      color: @color-gray-66;
       display: flex;
       flex-direction: column;
+      margin-top: 10px;
+    }
+    &._genres-name {
+      padding: 8px;
     }
     &._type,
     ._year,
     ._ratingImdb,
-    ._genres,
-    ._countries {
-      flex-direction: row;
-      justify-content: space-between;
+    ._countries,
+    ._filmLength {
+      display: grid;
+      grid-template-columns: 2fr 2fr;
+      align-items: flex-end;
     }
-
-    ._description,
-    ._slogan {
-      margin-top: 8%;
+    ._genres {
+      display: grid;
+      grid-template-columns: 2fr 2fr;
+    }
+    &._feature-title {
+      font-weight: bold;
+      font-size: 32px;
+    }
+    &._description,
+    &._slogan {
       flex-direction: column;
+      line-height: 48px;
+    }
+  }
+}
+@media only screen and (max-width: 820px) {
+  .film-details {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin: 0 16px;
+    line-height: 24px;
+    &__img {
+      width: 250px;
+      height: 400px;
+      margin: 0 8%;
+    }
+    &__info {
+      font-size: 16px;
+      &._title {
+        font-size: 24px;
+        font-weight: bold;
+      }
+      &._feature {
+        display: flex;
+        flex-direction: column;
+        margin-top: 8px;
+      }
+
+      &._feature-title {
+        font-weight: bold;
+        font-size: 16px;
+        line-height: 24px;
+      }
+      &._type,
+      ._year,
+      ._ratingImdb,
+      ._countries,
+      ._filmLength,
+      ._genres {
+        display: grid;
+        grid-template-columns: 2fr 2fr;
+        align-items: flex-end;
+      }
+      &._description,
+      &._slogan {
+        flex-direction: column;
+        line-height: 24px;
+      }
     }
   }
 }
