--- a/apps/ux-films-finder/src/app/components/not-found-page/not-found-page.component.less
+++ b/apps/ux-films-finder/src/app/components/not-found-page/not-found-page.component.less
@@ -1,9 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@700&family=Montserrat:wght@100&display=swap');
 .not-found {
-  height: 100vh;
-  width: 100vw;
   display: flex;
   justify-content: center;
+  height: calc(100vh - 70px);
   align-items: center;
   &__text-container {
     text-align: center;
