added Theme switcher

--- a/apps/ux-films-finder/src/app/components/header/header.component.html
+++ b/apps/ux-films-finder/src/app/components/header/header.component.html
@@ -19,6 +19,7 @@
       </a>
     </div>
   </div>
+  <ff-switcher></ff-switcher>
   <div class="header__right-side">
     <form class="header__search">
       <div *ngIf="isShown" class="header__search-content">
