added Theme switcher

--- a/apps/ux-films-finder/src/app/components/switcher/switcher.component.less
+++ b/apps/ux-films-finder/src/app/components/switcher/switcher.component.less
@@ -15,7 +15,7 @@
     height: 28px;
     border-style: none;
     border-radius: 32px;
-    background-color: @color-gray-42;
+    background-color: transparent;
 
     &._base {
       color: @color-black-00;
