--- a/apps/ux-films-finder/src/assets/styles/themes/dark/common/common.less
+++ b/apps/ux-films-finder/src/assets/styles/themes/dark/common/common.less
@@ -1,4 +1,4 @@
-body {
+body.theme-dark {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
@@ -6,37 +6,9 @@ body {
   color: @color-white-ff;
 }
 
-* {
-  box-sizing: border-box;
-}
-
 a,
 a:hover,
 a:active,
 a:focus {
   color: @color-white-ff;
-}
-h1 {
-  line-height: 56px;
-  font-size: 48px;
-  margin: 0;
-  padding: 0;
-}
-h2 {
-  line-height: 44px;
-  font-size: 32px;
-  margin: 0;
-  padding: 0;
-}
-h3 {
-  line-height: 36px;
-  font-size: 28px;
-  margin: 0;
-  padding: 0;
-}
-h4 {
-  line-height: 40px;
-  font-size: 24px;
-  margin: 0;
-  padding: 0;
 }
