added dark theme example

--- a/apps/ux-films-finder/src/app/components/category/category.component.less
+++ b/apps/ux-films-finder/src/app/components/category/category.component.less
@@ -1,1 +1,6 @@
-@import '../../../assets/styles/themes/base/common/shared';
+@import '../../../assets/styles/themes/dark/common/shared';
+.theme-dark {
+  & a {
+    color: @color-white-ff;
+  }
+}
