--- a/apps/ux-films-finder/src/app/components/switcher/switcher.component.less
+++ b/apps/ux-films-finder/src/app/components/switcher/switcher.component.less
@@ -2,7 +2,7 @@
 .switcher {
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  justify-content: space-between;
   background-color: @color-gray-42;
   color: @color-gray-1b;
   width: 93px;
@@ -18,7 +18,7 @@
     border-style: none;
     border-radius: 32px;
     background-color: @color-green-69;
-
+    cursor: pointer;
     &._moon {
       background-color: transparent;
       color: @color-gray-1b;
