fixed style dark theme and switcher

--- a/apps/ux-films-finder/src/app/components/switcher/switcher.component.less
+++ b/apps/ux-films-finder/src/app/components/switcher/switcher.component.less
@@ -11,7 +11,9 @@
   border-radius: 32px;
   margin-top: 20px;
   margin-left: 22px;
-
+  &__button:not([disabled]):hover &__icon {
+    color: fade(@color-green-69, 70%);
+  }
   &__button {
     width: 40px;
     height: 28px;
@@ -19,6 +21,8 @@
     border-radius: 32px;
     background-color: @color-green-69;
     cursor: pointer;
+    transition: 0.3s;
+
     &._moon {
       background-color: transparent;
       color: @color-gray-1b;
@@ -34,7 +38,7 @@
 
   &__icon {
     color: @color-gray-1b;
-
+    transition: 0.3s;
     &._dark._moon {
       color: @color-green-69;
     }
