--- a/apps/ux-films-finder/src/app/components/switcher/switcher.component.html
+++ b/apps/ux-films-finder/src/app/components/switcher/switcher.component.html
@@ -1,10 +1,20 @@
-<div class="switcher" (click)="changeTheme()">
-  <button class="switcher__button _moon" [class._dark]="isDarkThemeEnabled">
+<div class="switcher">
+  <button
+    class="switcher__button _moon"
+    [class._dark]="isDarkThemeEnabled"
+    [disabled]="isDarkThemeEnabled"
+    (click)="changeTheme()"
+  >
     <mat-icon class="switcher__icon _moon" [class._dark]="isDarkThemeEnabled">
       nightlight
     </mat-icon>
   </button>
-  <button class="switcher__button" [class._dark]="isDarkThemeEnabled">
+  <button
+    class="switcher__button"
+    [class._dark]="isDarkThemeEnabled"
+    [disabled]="!isDarkThemeEnabled"
+    (click)="changeTheme()"
+  >
     <mat-icon class="switcher__icon" [class._dark]="isDarkThemeEnabled">
       light_mode
     </mat-icon>
