--- a/apps/ux-films-finder/src/app/components/search-persons/search-persons.component.less
+++ b/apps/ux-films-finder/src/app/components/search-persons/search-persons.component.less
@@ -4,6 +4,19 @@
   &__list {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
-    margin: 48px;
+    margin: 16px;
+  }
+  &__input {
+    display: flex;
+    width: 60%;
+    background: @color-white-ff;
+    color: @color-gray-66;
+    box-shadow: 0 4px 8px 0 @color-gray-66;
+    border: 0;
+    border-radius: 48px;
+    outline: 0;
+    padding: 22px 18px;
+    margin: 0 auto;
+    font-size: 24px;
   }
 }
