search person components

--- a/apps/ux-films-finder/src/app/components/card/card.component.html
+++ b/apps/ux-films-finder/src/app/components/card/card.component.html
@@ -2,4 +2,5 @@
   <img class="card__img" [src]="url" />
   <div class="card__name">{{ name }}</div>
   <div class="card__rating">{{ rating }}</div>
+  <div class="card__gender">{{ gender }}</div>
 </div>
