--- a/apps/ux-films-finder/src/app/components/search-persons/search-persons.component.html
+++ b/apps/ux-films-finder/src/app/components/search-persons/search-persons.component.html
@@ -12,7 +12,7 @@
       <a routerLink="/persons/{{ person?.kinopoiskId }}">
         <ff-card
           [name]="person?.nameRu ? person.nameRu : person.nameEn"
-          [url]="person?.posterUrl ?? ''"
+          [url]="person?.posterUrl ? person.posterUrl : ''"
           [gender]="person?.sex === 'FEMALE' ? 'Женский' : 'Мужской'"
         ></ff-card>
       </a>
