--- a/apps/ux-films-finder/src/app/components/banner/banner.component.less
+++ b/apps/ux-films-finder/src/app/components/banner/banner.component.less
@@ -19,114 +19,85 @@
   width: 100%;
   height: 100%;
   background: black;
+  display: flex;
 }
 .banner-name {
-  width: 45%;
+  width: 40%;
   height: 100%;
-  float: left;
 }
 .nameRu {
-  width: 80%;
+  width: 70%;
   margin-top: 18%;
-  margin-left: 18%;
-  font-size: 40px;
+  margin-bottom: 9%;
+  margin-left: 22%;
+  font-size: 35px;
   font-weight: bold;
   color: white;
+  line-height: 1.5;
 }
 .nameEn {
   width: 40%;
-  height: 5%;
-  margin-top: 1%;
-  margin-left: 18%;
+  margin-bottom: 6%;
+  margin-left: 22%;
   color: rgb(167, 167, 167);
-  font-size: 14px;
+  font-size: 18px;
+}
+.genres {
+  width: 75%;
+  margin-left: 22%;
+  color: white;
+  font-size: 19px;
+  line-height: 2.5;
+  word-spacing: 0.5em;
+}
+
+.poster {
+  width: 25%;
+  height: 100%;
+}
+.posterUrl img {
+  margin-top: 10%;
+  margin-bottom: 10;
+  width: 100%;
+  height: 90%;
+  background-size: 30% 100%;
+}
+
+.description {
+  width: 35%;
+  height: 100%;
+  margin-top: 7%;
+  line-height: 2;
 }
 
 .description p {
-  margin-left: 18%;
+  display: inline-block;
+  margin-left: 14%;
   height: 20%;
   color: rgb(167, 167, 167);
-  font-size: 14px;
+  font-size: 15px;
 }
-.genres {
-  width: 80%;
-  height: 20%;
-  margin-top: 3%;
-  margin-left: 18%;
+.rating {
+  margin-right: 10%;
   color: white;
   font-size: 16px;
 }
-.year {
-  margin-top: 2%;
-  margin-left: 18%;
+.filmLength {
+  margin-right: 10%;
   color: white;
   font-size: 16px;
 }
 .countries {
-  margin-top: 2%;
+  margin-right: 10%;
   color: white;
   font-size: 16px;
 }
-.addition {
-  display: flex;
-}
-.filmLength p {
-  height: 15%;
-  margin-top: 3%;
-  color: rgb(167, 167, 167);
-  font-size: 14px;
-}
-.filmLength {
-  width: 70%;
-  height: 15%;
-  line-height: 2;
+.year {
+  margin-right: 10%;
   color: white;
-  margin-left: 18%;
+  font-size: 16px;
 }
-.poster {
-  width: 55%;
-  height: 100%;
-  float: right;
-}
-.posterUrl img {
-  width: 55%;
-  height: 100%;
-  float: right;
-  margin-right: 20%;
 
-  background-size: 55% 100%;
-}
-.gradient {
-  width: 57%;
-  height: 100%;
-  float: right;
-  margin-right: 15%;
-  position: absolute;
-  background: linear-gradient(
-      to left,
-      rgba(0, 0, 0, 0),
-      rgba(0, 0, 0, 0.001),
-      rgba(0, 0, 0, 0.005),
-      rgba(0, 0, 0, 0.15),
-      rgba(0, 0, 0, 0.25),
-      rgba(0, 0, 0, 0.3),
-      rgba(0, 0, 0, 0.9),
-      rgba(0, 0, 0, 1),
-      black
-    ),
-    linear-gradient(
-      to right,
-      rgba(0, 0, 0, 0),
-      rgba(0, 0, 0, 0.001),
-      rgba(0, 0, 0, 0.005),
-      rgba(0, 0, 0, 0.15),
-      rgba(0, 0, 0, 0.2),
-      rgba(0, 0, 0, 0.4),
-      rgba(0, 0, 0, 0.9),
-      rgba(0, 0, 0, 1),
-      black
-    );
-}
 .navigation-wrapper {
   position: relative;
 }
