--- a/apps/ux-films-finder/src/app/components/card/card.component.less
+++ b/apps/ux-films-finder/src/app/components/card/card.component.less
@@ -5,6 +5,9 @@
   line-height: 20px;
   font-size: 21px;
   &__img {
+    box-shadow: 1px 1px 29px -3px @color-gray-66;
+    display: flex;
+    position: relative;
     border-radius: 10px;
     width: 275px;
     height: 367px;
@@ -13,7 +16,7 @@
     display: flex;
     position: absolute;
     bottom: 25px;
-    align-items: center;
+    text-align: center;
     width: 275px;
     height: 40px;
     color: @color-black-00;
